[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/panel_white_transparent.png" type="Texture" id=1]
[ext_resource path="res://ui/panel.tres" type="StyleBox" id=2]
[ext_resource path="res://ui/manage_party/party_item.gd" type="Script" id=4]

[node name="PartyItem" type="NinePatchRect"]
margin_right = 60.0
margin_bottom = 160.0
rect_min_size = Vector2( 60, 0 )
mouse_filter = 1
texture = ExtResource( 1 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
mouse_filter = 1

[node name="CharacterTexture" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
margin_right = 54.0
margin_bottom = 154.0
rect_min_size = Vector2( 50, 150 )
expand = true
stretch_mode = 7

[node name="RichTextLabel" type="Label" parent="MarginContainer"]
margin_right = 54.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 154 )
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -26.0
margin_top = -49.0
margin_right = 26.0
margin_bottom = -25.0
mouse_filter = 2

[node name="SkillOneTexture" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
margin_bottom = 24.0

[node name="SkillTwoTexture" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 4.0
margin_right = 4.0
margin_bottom = 24.0

[node name="PopupDialog" type="PopupDialog" parent="."]
margin_left = -8.0
margin_top = 32.0
margin_right = 44.0
margin_bottom = 58.0
custom_styles/panel = ExtResource( 2 )

[node name="HBoxContainer" type="VBoxContainer" parent="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0

[node name="Label" type="Label" parent="PopupDialog/HBoxContainer"]
margin_right = 52.0
margin_bottom = 7.0
mouse_filter = 1
text = "Remove"
align = 1
valign = 1

[node name="CancelLabel" type="Label" parent="PopupDialog/HBoxContainer"]
margin_top = 11.0
margin_right = 52.0
margin_bottom = 18.0
mouse_filter = 1
text = "Cancel"
align = 1
valign = 1

[connection signal="gui_input" from="MarginContainer" to="." method="_on_MarginContainer_gui_input"]
[connection signal="gui_input" from="PopupDialog/HBoxContainer/Label" to="." method="_on_Label_gui_input"]
